--- a/arch/arm64/configs/montana_defconfig
+++ b/arch/arm64/configs/montana_defconfig
@@ -2721,6 +2721,7 @@ CONFIG_MSM_CAMERA=y
 # CONFIG_MSM_CAMERA_DEBUG is not set
 # CONFIG_MSM_CAMERA_AUTOMOTIVE is not set
 CONFIG_MSMB_CAMERA=y
+CONFIG_MSMB_CAMERA_2017=y
 # CONFIG_MSMB_CAMERA_DEBUG is not set
 # CONFIG_MSMB_CAMERA_2016 is not set
 CONFIG_MSM_CAMERA_SENSOR=y
