Add defconfig modifications
Change-Id: Ibf4b3124f5e38f25262b7cc985b6d0134a4b8893
Signed-off-by: ShivamKumarJha <jha.shivam3@gmail.com>

--- a/arch/arm64/configs/msmcortex-perf_defconfig
+++ b/arch/arm64/configs/msmcortex-perf_defconfig
@@ -568,6 +568,7 @@ CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_PIL_MSS_QDSP6V5=y
+CONFIG_ICNSS=y
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_KERNEL_PROTECT=y
@@ -607,6 +608,7 @@ CONFIG_DEBUG_INFO=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
+CONFIG_SCHED_DEBUG=y
 CONFIG_SCHEDSTATS=y
 CONFIG_SCHED_STACK_END_CHECK=y
 CONFIG_TIMER_STATS=y
