--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -246,6 +246,18 @@ config MSM_WATCHDOG_V2
 	  deadlocks. It does not run during the bootup process, so it will
 	  not catch any early lockups.
 
+config MSM_WATCHDOG_CTX_PRINT
+	bool "Print context dump saved by secure mode watchdog handler"
+	default n
+	depends on MSM_WATCHDOG_V2
+	depends on MSM_MEMORY_DUMP_V2
+	depends on PSTORE_RAM_ANNOTATION_APPEND
+	help
+	   After enabling this option, kernel will reserve bigger buffer
+	   for secure mode watchdog handler to save info. And kernel will
+	   try to print the info if it looks valid.
+	   If unsure, say N
+
 config MSM_FORCE_WDOG_BITE_ON_PANIC
 	bool "MSM force watchdog bite"
 	depends on MSM_WATCHDOG_V2
@@ -509,6 +521,12 @@ config MSM_GLINK_BGCOM_XPRT
 	  allows for G-Link communication with remote subsystems that are
 	  external to the System-on-Chip.
 
+config PANIC_ON_GLINK_ERR
+	bool "Cause a Kernel Panic When Repeated glink Errors Occur"
+	help
+	 Select this option to upgrade warnings for potentially unrecoverable
+	 glink failures, to a kernel panic for easier detection and debug
+
 config MSM_SPCOM
 	depends on MSM_GLINK
 	bool "Secure Processor Communication over GLINK"
@@ -621,16 +639,15 @@ config MSM_EVENT_TIMER
 	  events that require the core to be awake and ready to handle the
 	  event.
 
-config MSM_IPC_ROUTER_USB_XPRT
-	depends on USB_QCOM_IPC_BRIDGE || USB_F_IPC
+config MSM_IPC_ROUTER_HSIC_XPRT
+	depends on USB_QCOM_IPC_BRIDGE
 	depends on IPC_ROUTER
-	bool "MSM USB XPRT Layer"
+	bool "MSM HSIC XPRT Layer"
 	help
-	  USB Transport Layer that enables off-chip communication of IPC Router.
-	  When the USB endpoint becomes available, this layer registers the
-	  transport with IPC Router and enable message exchange. This layer is
-	  independent of USB host or device mode IPC bridge and can interface
-	  with only one of them on a given platform.
+	  HSIC Transport Layer that enables off-chip communication of
+	  IPC Router. When the HSIC endpoint becomes available, this layer
+	  registers the transport with IPC Router and enable message
+	  exchange.
 
 config MSM_SYSMON_GLINK_COMM
 	bool "MSM System Monitor communication support using GLINK transport"
@@ -780,6 +797,141 @@ config TRACER_PKT
 	  processor communication protocols. The profiling information
 	  can be logged into the tracer packet itself.
 
+config MMI_DEVICE_DTBS
+	depends on ARCH_MSM
+	default n
+	bool "Motorola Mobility Device DTBs"
+	help
+	  Only include Motorola device specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config POTTER_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Potter DTBs"
+	help
+	  Only include Potter specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config SANDERS_DTB
+        depends on ARCH_MSM
+        default n
+        bool "Sanders DTBs"
+        help
+          Only include Sanders specific DTBs to limit the number that
+          get built during kernel compilation.
+
+config ADDISON_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Addison DTBs"
+	help
+	  Only include Addison specific DTBs to limit the number that
+	  get built during kernel compilation.
+config ALBUS_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Albus DTBs"
+	help
+	  Only include Albus specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config JOHNSON_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Johnson DTBs"
+	help
+	  Only include Johnson specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config ALI_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Ali DTBs"
+	help
+	  Only include Ali specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config DEEN_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Deen DTBs"
+	help
+	  Only include Deen specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config CEDRIC_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Cedric DTBs"
+	help
+	  Only include Cedric specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config MONTANA_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Montana DTBs"
+	help
+	  Only include Montana specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config PERRY_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Perry DTBs"
+	help
+	  Only include Perry specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config JAMES_DTB
+        depends on ARCH_MSM
+        default n
+        bool "James DTBs"
+        help
+          Only include James specific DTBs to limit the number that
+          get built during kernel compilation.
+
+config PETTYL_DTB
+        depends on ARCH_MSM
+        default n
+        bool "Pettyl DTBs"
+        help
+          Only include PettyL specific DTBs to limit the number that
+          get built during kernel compilation.
+
+config NORA_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Nora DTBs"
+	help
+	  Only include James specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config JETER_DTB
+	depends on ARCH_MSM
+	default n
+	bool "Jeter DTBs"
+	help
+	  Only include Jeter specific DTBs to limit the number that
+	  get built during kernel compilation.
+
+config OWENS_DTB
+        depends on ARCH_MSM
+        default n
+        bool "Owens DTBs"
+        help
+          Only include Owens specific DTBs to limit the number that
+          get built during kernel compilation.
+
+config HANNAH_DTB
+        depends on ARCH_MSM
+        default n
+        bool "Hannah DTBs"
+        help
+          Only include Hannah specific DTBs to limit the number that
+          get built during kernel compilation.
+
 config MSM_SECURE_BUFFER
 	bool "Helper functions for securing buffers through TZ"
 	help
@@ -787,6 +939,23 @@ config MSM_SECURE_BUFFER
 	 memory buffers. This ensures that only the correct clients can
 	 use this memory and no unauthorized access is made to the
 	 buffer
+
+config ICNSS
+	tristate "Platform driver for Q6 integrated connectivity"
+	select CNSS_UTILS
+	---help---
+	  This module adds support for Q6 integrated WLAN connectivity
+	  subsystem. This module is responsible for communicating WLAN on/off
+	  control messages to FW over QMI channel. It is also responsible for
+	  handling WLAN PD restart notifications.
+
+config MSM_CORE_CTL
+        select MSM_CORE_CTL_HELPER
+        tristate "Core control driver to dynamically hotplug CPUs"
+        help
+          Support for dynamicatlly hotplugging CPUs from kernel based on
+          current system load and state. It also supports limiting min and
+          max online CPUs from userspace.
 
 config MSM_BAM_DMUX
 	bool "BAM Data Mux Driver"
@@ -941,5 +1110,37 @@ config WCD_DSP_GLINK
 	   provides read and write interface via char device.
 
 source "drivers/soc/qcom/memshare/Kconfig"
+
+config BOOTINFO
+	bool "Boot Information Feature"
+	default n
+	help
+	  This feature provides access to certain boot information
+	  from both kernel context (via function call) and user
+	  context (via /proc/bootinfo).
+
+config MMI_UNIT_INFO
+	default n
+	bool "Motorola Mobility Unit Info"
+	help
+	Provide mechanism to expose unit information to other cpu via smem.
+
+config MMI_SOC_INFO
+	default n
+	bool "Motorola Mobility SOC Info"
+	help
+	  Provide mechanism to export MSM SOC info.
+
+config MMI_RAM_INFO
+	default n
+	bool "Motorola Mobility RAM Info"
+	help
+	Provide mechanism to access RAM size and MR registers values via sysfs.
+
+config MMI_STORAGE_INFO
+	default n
+	bool "Motorola Mobility STORAGE Info"
+	help
+	Provide mechanism to export EMMC/UFS type, size and vendor info.
 
 endif # ARCH_MSM
